Experimets with finish of simulation and cycle buffor for memory.